--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+* .png 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,python
 
